# occultatum-assets

./: .gitignore  README.md  communication.nls  occultatum_farms.nlogo  plus.nlogo  tstates.nls
.github/: copilot-instructions.md
occultatum-python/: devenv.nix  pyproject.toml  workspace.toml
occultatum-python/bases/occultatum/artifact_to_3d/: __init__.py  core.py
occultatum-python/bases/occultatum/artifact_to_3d_api/: __init__.py  main.py
occultatum-python/bases/occultatum/artifact_to_3d_cli/: __init__.py
occultatum-python/components/occultatum/artifact_to_3d/: README.md  __init__.py  core.py
occultatum-python/components/occultatum/crop_image_to_foreground/: README.md  __init__.py  core.py
occultatum-python/components/occultatum/image_to_glb/: README.md  __init__.py  core.py
occultatum-python/components/occultatum/isolate_artifact/: README.md  __init__.py  core.py
occultatum-python/components/occultatum/netlogo/: README.md  __init__.py  core.py
occultatum-python/components/occultatum/paleo/: README.md  __init__.py  core.py  paleo.py
occultatum-python/components/occultatum/romfarms/: README.md  __init__.py  landscape_categories.py
occultatum-python/components/occultatum/romfarms/ROMFARMS-1.1/: README.md  ROMFARMSvfinal documented.nlogo
occultatum-python/components/occultatum/romfarms/docs/: complete dissertation.txt  design.md  detective_games.md
occultatum-python/components/occultatum/simple_object_storage/: README.md  __init__.py  core.py
occultatum-python/components/occultatum/triposr_model/: README.md  __init__.py  core.py
occultatum-python/components/occultatum/triposr_model/tsr/: utils.py
occultatum-python/components/occultatum/triposr_model/tsr/models/: isosurface.py
occultatum-python/components/occultatum/tsr/: README.md  __init__.py  system.py  utils.py
occultatum-python/development/: geo.py  image_processing.py  optimizer.py  pyproject.toml  romfarms.py  test.py  tsr_model.py
occultatum-python/projects/artifact-to-3d/: pyproject.toml
occultatum-python/projects/open_context_crawler/: .gitignore  README.md  devenv.nix  oc_crawler_db.sql  postgrest.conf  tutorial.conf
occultatum-python/test/bases/occultatum/artifact_to_3d/: test_core.py
occultatum-python/test/components/occultatum/crop_image_to_foreground/: test_core.py
occultatum-python/test/components/occultatum/image_to_glb/: test_core.py
occultatum-python/test/components/occultatum/isolate_artifact/: test_core.py
occultatum-python/test/components/occultatum/netlogo/: test_core.py
occultatum-python/test/components/occultatum/simple_object_storage/: test_core.py
occultatum-python/test/components/occultatum/triposr_model/: test_core.py
occultatum-python/test/components/occultatum/tsr/: test_core.py
